Fixed the video element to wrap the background

--- a/home/styles/home_style.css
+++ b/home/styles/home_style.css
@@ -10,7 +10,9 @@
     padding: 90px 0;
 
     background: var(--theme-background-color);
-    background-image: url('/ref/sermon_series/enduring_faith/background.jpg');
+    background-image: url('/ref/sermon_series/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #sermon-video-element iframe {
